<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="@dimen/app_padding">

    <EditText
        android:id="@+id/addTextTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/title_add_task"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="@dimen/title_size" />

    <EditText
        android:id="@+id/add_task"
        style="@style/text_view_style"
        android:hint="@string/hint_add_task"
        android:inputType="textAutoComplete" />

    <Button
        android:id="@+id/button_save"
        style="@style/button_style"
        android:layout_marginTop="@dimen/margin_between_views"
        android:text="@string/button_save" />

</LinearLayout>
